# ekur

./: .gitignore  .gitmodules  README.md  TODO  all_visors.json
.github/: FUNDING.yml  dependabot.yml
addon/: .gitignore  __init__.py  blender_manifest.toml  pyproject.toml
addon/src/: constants.py  exceptions.py  forge_level_reader.py  import_logic.py  import_model.py  import_panel.py  import_spartan.py  json_definitions.py  utils.py
addon/src/madeleine/: bond_reader.py  bond_types.py  forge_level_reader.py  madeleine.py  uleb.py
addon/src/material_types/: color_decal.py  decal_shader.py  diffuse_shader.py  hair_shader.py  illum_shader.py  layered_level.py  layered_shader.py  material_types.py  skin_shader.py
addon/src/model/: blendshape_bounding_box_buffer.py  blendshape_index_buffer.py  blendshape_position_buffer.py  bone.py  bounding_box.py  buffer_flags.py  color_buffer.py  header.py  index_buffer.py  marker.py  metadata.py  normal_buffer.py  position_buffer.py  region.py  rtgo_offset.py  section.py  submesh.py  uv_buffer.py  vectors.py  vertex_buffer.py  vertex_type.py  weight_buffer.py  weight_extra_buffer.py  weight_index_buffer.py
addon/src/model/importer/: bone.py  markers.py  model_importer.py
addon/src/nodes/: __init__.py  better_uv_scaling.py  color_blend.py  color_decal.py  color_mixer.py  decal.py  detail_normals.py  diffuse_shader.py  emission.py  float_blend.py  hair.py  heightaccum_l1.py  heightblend.py  hims.py  illum.py  infinite_color.py  infinite_masking_sorter.py  infinite_masking_sorter_nogrime.py  infinite_masking_sorter_nogrime_col.py  infinite_matts.py  layer.py  layer_blending.py  layer_overlay_bool_col.py  layer_overlay_bool_norm.py  layered_level_hinf.py  mask_toggles.py  nnhg_shader.py  norm_normalize.py  normal_blend.py  normal_map_combine_orientation.py  occlusion_blend.py  rohg_shader.py  rohm_shader.py  roughness_math.py  scratch_global_toggle.py  skin.py
addon/src/operators/: bake_operator.py  download_files_operator.py  dump_files_operator.py  forge_map_operator.py  forge_operator.py  level_operator.py  material_operator.py  model_operator.py  randomize_coating.py  spartan_online_operator.py  spartan_operator.py  vanity_operator.py
addon/src/ui/: __init__.py  bake_options.py  forge_map_options.py  forge_object_options.py  import_panel.py  import_utils.py  level_options.py  material_options.py  model_options.py  spartan_options.py  vanity_options.py
addon/test/: test_forge_map.py
assets/: all_visors.json  purp.blend  regions_and_permutations.json
crates/: Cargo.toml
crates/ekur/: Cargo.toml
crates/ekur/src/: main.rs  utils.rs
crates/ekur/src/adapters/: coating.rs  customization.rs  forge.rs  material.rs  mod.rs  model.rs  scenario.rs  texture.rs
crates/ekur_coating/: Cargo.toml
crates/ekur_coating/src/: lib.rs
crates/ekur_coating/src/common/: common_coating.rs  common_styles.rs  mod.rs
crates/ekur_coating/src/material/: material_coating.rs  mod.rs  runtime_coating.rs
crates/ekur_customization/: Cargo.toml
crates/ekur_customization/src/: customization_globals.rs  lib.rs  visor.rs
crates/ekur_definitions/: Cargo.toml
crates/ekur_definitions/src/: bitmap.rs  coating_globals.rs  coating_swatch.rs  crate_block.rs  customization_globals.rs  equipment.rs  forge_globals.rs  forge_manifest.rs  forge_object_definition.rs  lib.rs  material.rs  material_palette.rs  material_styles.rs  material_swatch.rs  model.rs  object_attachment.rs  object_theme.rs  particle_model.rs  render_model.rs  runtime_geo.rs  runtime_style.rs  runtime_styles.rs  scenario.rs  scenery.rs  stringlist.rs  vehicle.rs  visor.rs  weapon.rs
crates/ekur_forge/: Cargo.toml
crates/ekur_forge/src/: forge_material.rs  forge_object.rs  lib.rs  stringlist.rs
crates/ekur_materials/: Cargo.toml
crates/ekur_materials/src/: lib.rs  process.rs  utils.rs
crates/ekur_materials/src/basic/: banished_metal.rs  color_decal.rs  conestepped_decal.rs  const_decal.rs  decal_mp.rs  diffuse_shader.rs  eye_shader.rs  forerunner_layered.rs  forest_gold.rs  hair.rs  layered_level.rs  meter_shader.rs  mod.rs  parallax_decal.rs  self_illum.rs  skin_shader.rs  wetness_layered.rs
crates/ekur_materials/src/layered/: layered_shader.rs  mod.rs
crates/ekur_model/: Cargo.toml
crates/ekur_model/src/: lib.rs  utils.rs
crates/ekur_model/src/buffers/: bone.rs  index_buffer.rs  mod.rs  vertex_buffer.rs
crates/ekur_model/src/serialize/: metadata.rs  mod.rs  write.rs
crates/ekur_scenario/: Cargo.toml
crates/ekur_scenario/src/: lib.rs  scenario_bsp.rs
crates/ekur_texture/: Cargo.toml
crates/ekur_texture/src/: dds.rs  lib.rs  process.rs  utils.rs
ekur/: Cargo.toml
ekur/src/: main.rs
ekur/src/bitmap/: dds_header.rs  extract.rs  mod.rs
ekur/src/definitions/: bitmap.rs  coating_globals.rs  coating_swatch.rs  crate_block.rs  crates.rs  customization_globals.rs  equipment.rs  forge_globals.rs  forge_manifest.rs  forge_object_definition.rs  forge_object_manifest.rs  material.rs  material_palette.rs  material_styles.rs  material_swatch.rs  mod.rs  model.rs  object_attachment.rs  object_theme.rs  particle_model.rs  render_model.rs  runtime_geo.rs  runtime_style.rs  runtime_styles.rs  scenario.rs  scenery.rs  stringlist.rs  vehicle.rs  visor.rs  weapon.rs
ekur/src/loader/: mod.rs  module.rs
ekur/src/materials/: banished_metal.rs  color_decal.rs  common_utils.rs  conestepped_decal.rs  const_decal.rs  decal_mp.rs  diffuse_shader.rs  eye_shader.rs  hair.rs  layered_shader.rs  meter_shader.rs  mod.rs  parallax_decal.rs  process_material.rs  regular_level_shader.rs  self_illum.rs  serde_definitions.rs  skin_shader.rs
ekur/src/model/: bone.rs  index_buffer.rs  metadata.rs  mod.rs  serialize.rs  utils.rs  vertex_buffer.rs
ekur/src/serialize/: common_coating.rs  common_styles.rs  customization_globals.rs  forge_materials.rs  forge_object.rs  forge_objects.rs  material.rs  material_coating.rs  mod.rs  model.rs  runtime_coating.rs  scenario_bsp.rs  stringlist.rs  visor.rs
site/: index.html  index.json
utils/: get_assets.py  get_visor.py
(+4 files in other folders)
