[package]
name = "ekur"
version = "0.4.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.96"
bitflags = "2.8.0"
clap = { version = "4.5.30", features = ["derive"] }
ddsfile = "0.5.2"
image = { version = "0.25.5", features = ["png"], default-features = false }
image_dds = { version = "0.7.1", default-features = false, features = [
  "image",
  "ddsfile",
] }
infinite-rs = { version = "0.11.0", features = ["derive"] }
num_enum = "0.7.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139" }
walkdir = "2.5.0"
byteorder = "1.5.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
