[package]
name = "ekur"
version = "1.1.7"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.98"
bitflags = "2.9.0"
clap = { version = "4.5.40", features = ["derive"] }
ddsfile = "0.5.2"
image = { version = "0.25.6", features = ["png"], default-features = false }
image_dds = { version = "0.7.2", default-features = false, features = [
  "image",
  "ddsfile",
] }
infinite-rs = { version = "0.12.1", features = ["derive"] }
num_enum = "0.7.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
walkdir = "2.5.0"
byteorder = "1.5.0"

[profile.release]
lto = "fat"
codegen-units = 1
#strip = "symbols"
