[package]
name = "ekur"
version = "1.1.9"
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
walkdir = "2.5.0"
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
infinite-rs = { version = "0.13.1", features = ["derive"] }
ekur_coating = { version = "0.1.0", path = "../ekur_coating" }
ekur_customization = { version = "0.1.0", path = "../ekur_customization" }
ekur_definitions = { version = "0.1.0", path = "../ekur_definitions" }
ekur_forge = { version = "0.1.0", path = "../ekur_forge" }
ekur_materials = { version = "0.1.0", path = "../ekur_materials" }
ekur_model = { version = "0.1.0", path = "../ekur_model" }
ekur_scenario = { version = "0.1.0", path = "../ekur_scenario" }
ekur_texture = { version = "0.1.0", path = "../ekur_texture" }
image = { version = "0.25.10", default-features = false, features = ["png"] }
