[package]
name = "ekur_definitions"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bitflags = "2.11.0"
infinite-rs = { version = "0.13.1", features = ["derive"] }
num_enum = "0.7.6"
