[package]
name = "ekur_model"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.102"
infinite-rs = { version = "0.13.1", features = ["derive"] }
byteorder = "1.5.0"
ekur_definitions = { version = "0.1.0", path = "../ekur_definitions" }
